--- a/lectures/machine-code/slides.tex
+++ b/lectures/machine-code/slides.tex
@@ -1,8 +1,8 @@
 \ifdefined\ishandout
     \documentclass[handout]{beamer}
-\else
+    \else
+    % \documentclass[handout]{beamer}
     \documentclass{beamer}
-    % \setbeamercovered{transparent}
 \fi
 
 \includeonly{machine-code}
