updates for 2025 (wip)

--- a/lectures/git/slides.tex
+++ b/lectures/git/slides.tex
@@ -60,7 +60,7 @@
 %***************************************************************
 \begin{document} 
 
-\title{Datorer och datoranvändning\\Versionshantering och Git} 
+\title{{\small\bf EDAB05---Programmering, grundkurs}\\Datorer och datoranvändning (dod)\\Versionshantering och Git} 
 
 \frame[plain]{
 \maketitle
