--- a/lectures/intro/intro.tex
+++ b/lectures/intro/intro.tex
@@ -6,21 +6,26 @@
 \begin{frame}[fragile=singleslide]
 	\frametitle{Välkommen}
 	\begin{itemize}
-		\item Syftet med kursen? Introduktion inför andra kurser.
+		\item Syftet med \emph{dod}-delen?
+				\begin{itemize}
+					\item Lär dig grundläggande verktyg.
+					\item Introduktion inför kommande kurser.
+				\end{itemize}
 		\item Vem läser kursen?
 		      \begin{itemize}
-			      \item D-programmet.
-			      \item C-programmet. Som del av EITA55
+				\item C-programmet.
+				\item D-programmet. 
 		      \end{itemize}
 		\item Vad innehåller kursen?
 		      \begin{itemize}
 			      \item Fyra ämnen, med vardera en föreläsning och en laboration
-			      \item Unix och Linux
-			      \item \LaTeX
-			      \item Git och Github
-			      \item Maskinkod
+			      \begin{enumerate}
+					\item Unix och Linux
+					\item \LaTeX
+					\item Git och Github
+					\item Maskinkod
+				  \end{enumerate}
 		      \end{itemize}
-		\item Läses tillsammans med EDAA45 (pgk, Programmering grundkurs)
 	\end{itemize}
 \end{frame}
 
@@ -31,8 +36,7 @@
 	\begin{itemize}
 		\item Gruppindelning
 		      \begin{itemize}
-			      \item Gruppindelning samma som i EDAA45, se Canvas.
-			      \item Ni som bara läser dod, ingen gruppindelning.
+			      \item Gruppindelning, se Canvas.
 			      \item Kapten Alloc \url{https://fileadmin.cs.lth.se/pgk/kaptenalloc/}
 		      \end{itemize}
 		\item Schema
@@ -41,7 +45,7 @@
 		      \begin{itemize}
 			      \item En labb per vecka, start imorgon!
 			      \item Föreberedelseuppgifter, kontrollfrågor.
-			      \item Laboration 1, Linux (Första laborationen redan imorgon!)
+			      \item Laboration 1, Linux (Första laborationen på torsdag!)
 			      \item Laboration 2. \LaTeX
 			      \item Laboration 3, Git
 			      \item Laboration 4, Maskinkod
@@ -52,11 +56,35 @@
 
 
 \begin{frame}[fragile=singleslide]
+	\frametitle{Kurshemsidan och Github}
+
+		{\bf Den öppna kurshemsidan:}
+
+		\smallskip
+		\small\url{https://lunduniversity.github.io/pgk/}
+		
+		
+		\bigskip
+		
+		
+		{\bf Allt kursmaterial finns tillgängligt på GitHub:}
+
+		\smallskip
+		\small\url{https://github.com/lunduniversity/introprog-computer-intro}
+		
+		\smallskip
+		\begin{itemize}
+			\item Källkod och material för kursen.
+			\item Lämna issues om ni upptäcker problem eller vill föreslå förbättringar.
+			\item Pull requests är alltid välkomna!
+		\end{itemize}
+\end{frame}
+
+\begin{frame}[fragile=singleslide]
 	\frametitle{Vid frågor}
 
 	\begin{itemize}
 		\item Ni kan alltid maila mig: \url{mattias.nordahl@cs.lth.se}
-		\item Discord (för EDAA45). Hitta invite-länk på Canvas-sidan.
-		\item Ni som inte går EDAA45, frivilligt att gå med.
+		\item Discord. Hitta invite-länk på Canvas-sidan.
 	\end{itemize}
 \end{frame}
