--- a/lectures/latex/slides.tex
+++ b/lectures/latex/slides.tex
@@ -67,7 +67,7 @@
 
 \begin{document}
 
-\title{Datorer och datoranvändning\\Föreläsning 3 --- \LaTeX}
+\title{{\small\bf EDAB05---Programmering, grundkurs}\\Datorer och datoranvändning (dod)\\Föreläsning 3 --- \LaTeX}
 
 \frame[plain]{
     \maketitle
