--- a/lectures/machine-code/machine-code.tex
+++ b/lectures/machine-code/machine-code.tex
@@ -297,6 +297,13 @@
         \ii{Exempel: \texttt{ADD R1, R2, R3}}
     \end{itemize}
 
+    % \begin{envi}
+    %     \begin{figure}
+    %         \includegraphics{Mips32_addi}
+    %         \caption{By en:User:Booyabazooka - \url{http://en.wikipedia.org/wiki/Image:Mips32_addi.svg}, CC BY-SA 3.0, \url{https://commons.wikimedia.org/w/index.php?curid=1362890}}
+    %     \end{figure}
+    % \end{envi}
+
     \blankline
     \ti{Exekvering av instruktioner (fetch-decode-execute)}
     \begin{itemize}
