--- a/lectures/machine-code/slides.tex
+++ b/lectures/machine-code/slides.tex
@@ -55,7 +55,7 @@
 %***************************************************************
 \begin{document} 
 
-\title{Datorer och datoranvändning\\Maskinkod} 
+\title{{\small\bf EDAB05---Programmering, grundkurs}\\Datorer och datoranvändning (dod)\\Maskinkod} 
 
 \frame[plain]{
 \maketitle
