--- a/lectures/unix/slides.tex
+++ b/lectures/unix/slides.tex
@@ -26,10 +26,6 @@
 \usepackage{url}
 \usepackage{datetime2}
 
-\usepackage{fontspec}  			  % Allows loading system fonts
-\setmainfont{Latin Modern Roman}  % Set the main (serif) font
-\setsansfont{Latin Modern Roman}  % Force sans-serif font to use the same font
-
 
 \usepackage{listings}
 \lstset{resetmargins=true}
@@ -57,7 +53,7 @@
 %***************************************************************
 \begin{document}
 
-\title{Datorer och datoranvändning\\Föreläsning 1 --- Unix/Linux}
+\title{{\small\bf EDAB05---Programmering, grundkurs}\\Datorer och datoranvändning (dod)\\Föreläsning 1 --- Unix/Linux}
 
 \frame[plain]{
     \maketitle
