--- a/lab-instructions/dodlabs.tex
+++ b/lab-instructions/dodlabs.tex
@@ -103,7 +103,7 @@
 	\sffamily
 	\renewcommand{\baselinestretch}{1.1}
 	\Huge\bfseries Datorlaborationer \\[5mm]
-	EDAA60 / EITA65 \\[2mm]
+	EDAB05 \\[2mm]
 	\LARGE\bfseries	Datorer och datoranvändning \\[7mm]
 	\large Lunds universitet, LTH --- \the\year
 \end{center}
